// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Block should build the Add block 1`] = `
AddBlock {
  "cancel_text": "Don’t need to add this item",
  "id": "add-block-add-item-page-title",
  "page_title": "Add item page title",
  "question": Object {
    "answers": Array [
      Answer {
        "id": "answeranswer-1",
        "mandatory": false,
        "type": undefined,
      },
    ],
    "id": "add-block-question-add-item-page-title",
    "title": "Enter details",
    "type": "General",
  },
  "type": "ListAddQuestion",
}
`;

exports[`Add Block should populate the definitons field when there is content and is enabled 1`] = `
AddBlock {
  "cancel_text": "Don’t need to add this item",
  "id": "add-block-add-item-page-title",
  "page_title": "Add item page title",
  "question": Object {
    "answers": Array [
      Answer {
        "id": "answeranswer-1",
        "mandatory": false,
        "type": undefined,
      },
    ],
    "definitions": Array [
      Object {
        "contents": Array [
          Object {
            "title": "hello world",
          },
        ],
        "title": "definition label",
      },
    ],
    "id": "add-block-question-add-item-page-title",
    "title": "Enter details",
    "type": "General",
  },
  "type": "ListAddQuestion",
}
`;

exports[`Add Block should populate the description field when there is content and is enabled 1`] = `
AddBlock {
  "cancel_text": "Don’t need to add this item",
  "id": "add-block-add-item-page-title",
  "page_title": "Add item page title",
  "question": Object {
    "answers": Array [
      Answer {
        "id": "answeranswer-1",
        "mandatory": false,
        "type": undefined,
      },
    ],
    "description": Array [
      "<h2>hello world</h2>",
    ],
    "id": "add-block-question-add-item-page-title",
    "title": "Enter details",
    "type": "General",
  },
  "type": "ListAddQuestion",
}
`;

exports[`Add Block should populate the guidance field in the answers object when there is addtionalInfo content and is enabled 1`] = `
AddBlock {
  "cancel_text": "Don’t need to add this item",
  "id": "add-block-add-item-page-title",
  "page_title": "Add item page title",
  "question": Object {
    "answers": Array [
      Answer {
        "guidance": Object {
          "contents": Array [
            Object {
              "description": "additionalInfo content",
            },
          ],
          "hide_guidance": "additionalInfo label",
          "show_guidance": "additionalInfo label",
        },
        "id": "answeranswer-1",
        "mandatory": false,
        "type": undefined,
      },
    ],
    "id": "add-block-question-add-item-page-title",
    "title": "Enter details",
    "type": "General",
  },
  "type": "ListAddQuestion",
}
`;

exports[`Add Block should populate the guidance field when there is content and is enabled 1`] = `
AddBlock {
  "cancel_text": "Don’t need to add this item",
  "id": "add-block-add-item-page-title",
  "page_title": "Add item page title",
  "question": Object {
    "answers": Array [
      Answer {
        "id": "answeranswer-1",
        "mandatory": false,
        "type": undefined,
      },
    ],
    "guidance": Object {
      "contents": Array [
        Object {
          "title": "hello world",
        },
      ],
    },
    "id": "add-block-question-add-item-page-title",
    "title": "Enter details",
    "type": "General",
  },
  "type": "ListAddQuestion",
}
`;

exports[`Driving Block should build the driving block 1`] = `
DrivingQuestion {
  "answers": Array [
    Object {
      "id": "answer-driving-confirmation-page",
      "mandatory": true,
      "options": Array [
        Object {
          "action": Object {
            "params": Object {
              "block_id": "add-block-add-item-page-title",
              "list_name": undefined,
            },
            "type": "RedirectToListAddBlock",
          },
          "label": "Yes",
          "value": "Yes",
        },
        Object {
          "label": "No",
          "value": "No",
        },
      ],
      "type": "Radio",
    },
  ],
  "guidance": Object {
    "contents": Array [
      Object {
        "description": "Additional guidance",
      },
    ],
  },
  "id": "question-driving-confirmation-page",
  "title": "Qualifier question",
  "type": "General",
}
`;

exports[`Edit Block should build the Edit block 1`] = `
EditBlock {
  "cancel_text": "Don’t need to edit this item",
  "id": "edit-block-add-item-page-title",
  "page_title": "Add item page title",
  "question": Object {
    "answers": Array [
      Answer {
        "id": "answeranswer-1",
        "mandatory": false,
        "type": undefined,
      },
    ],
    "id": "edit-block-question-add-item-page-title",
    "title": "Enter details",
    "type": "General",
  },
  "type": "ListEditQuestion",
}
`;

exports[`Edit Block should populate the definitons field when there is content and is enabled 1`] = `
EditBlock {
  "cancel_text": "Don’t need to edit this item",
  "id": "edit-block-add-item-page-title",
  "page_title": "Add item page title",
  "question": Object {
    "answers": Array [
      Answer {
        "id": "answeranswer-1",
        "mandatory": false,
        "type": undefined,
      },
    ],
    "definitions": Array [
      Object {
        "contents": Array [
          Object {
            "title": "hello world",
          },
        ],
        "title": "definition label",
      },
    ],
    "id": "edit-block-question-add-item-page-title",
    "title": "Enter details",
    "type": "General",
  },
  "type": "ListEditQuestion",
}
`;

exports[`Edit Block should populate the description field when there is content and is enabled 1`] = `
EditBlock {
  "cancel_text": "Don’t need to edit this item",
  "id": "edit-block-add-item-page-title",
  "page_title": "Add item page title",
  "question": Object {
    "answers": Array [
      Answer {
        "id": "answeranswer-1",
        "mandatory": false,
        "type": undefined,
      },
    ],
    "description": Array [
      "<h2>hello world</h2>",
    ],
    "id": "edit-block-question-add-item-page-title",
    "title": "Enter details",
    "type": "General",
  },
  "type": "ListEditQuestion",
}
`;

exports[`Edit Block should populate the guidance field in the answers object when there is addtionalInfo content and is enabled 1`] = `
EditBlock {
  "cancel_text": "Don’t need to edit this item",
  "id": "edit-block-add-item-page-title",
  "page_title": "Add item page title",
  "question": Object {
    "answers": Array [
      Answer {
        "guidance": Object {
          "contents": Array [
            Object {
              "description": "additionalInfo content",
            },
          ],
          "hide_guidance": "additionalInfo label",
          "show_guidance": "additionalInfo label",
        },
        "id": "answeranswer-1",
        "mandatory": false,
        "type": undefined,
      },
    ],
    "id": "edit-block-question-add-item-page-title",
    "title": "Enter details",
    "type": "General",
  },
  "type": "ListEditQuestion",
}
`;

exports[`Edit Block should populate the guidance field when there is content and is enabled 1`] = `
EditBlock {
  "cancel_text": "Don’t need to edit this item",
  "id": "edit-block-add-item-page-title",
  "page_title": "Add item page title",
  "question": Object {
    "answers": Array [
      Answer {
        "id": "answeranswer-1",
        "mandatory": false,
        "type": undefined,
      },
    ],
    "guidance": Object {
      "contents": Array [
        Object {
          "title": "hello world",
        },
      ],
    },
    "id": "edit-block-question-add-item-page-title",
    "title": "Enter details",
    "type": "General",
  },
  "type": "ListEditQuestion",
}
`;

exports[`Remove Block should build the remove block 1`] = `
RemoveBlock {
  "cancel_text": "Don’t need to remove this item?",
  "id": "remove-block-add-item-page-title",
  "question": Object {
    "answers": Array [
      Object {
        "id": "remove-confirmation-add-item-page",
        "mandatory": true,
        "options": Array [
          Object {
            "action": Object {
              "type": "RemoveListItemAndAnswers",
            },
            "label": "Yes",
            "value": "Yes",
          },
          Object {
            "label": "No",
            "value": "No",
          },
        ],
        "type": "Radio",
      },
    ],
    "id": "remove-block-question-add-item-page-title",
    "title": "Are you sure you want to remove this item?",
    "type": "General",
    "warning": "All of the information about this item will be deleted",
  },
  "type": "ListRemoveQuestion",
}
`;

exports[`Summary Block should build the Summary block 1`] = `
SummaryBlock {
  "item_title": Object {
    "placeholders": Array [
      Object {
        "placeholder": "listcollector_summary_placeholder",
        "transforms": Array [
          Object {
            "arguments": Object {
              "delimiter": "&nbsp;",
              "list_to_concatenate": Array [],
            },
            "transform": "concatenate_list",
          },
        ],
      },
    ],
    "text": "{listcollector_summary_placeholder}",
  },
  "title": "Summary",
}
`;

exports[`list collector question should build valid list collector question 1`] = `
ListCollectorQuestion {
  "answers": Array [
    Object {
      "id": "add-another-confirmation-page",
      "mandatory": true,
      "options": Array [
        Object {
          "action": Object {
            "type": "RedirectToListAddBlock",
          },
          "label": "Yes",
          "value": "Yes",
        },
        Object {
          "label": "No",
          "value": "No",
        },
      ],
      "type": "Radio",
    },
  ],
  "id": "list-collector-question-confirmation-page",
  "title": "Add another",
  "type": "General",
}
`;
